--- a/index.html
+++ b/index.html
@@ -4,6 +4,11 @@
 		<title>Homepage</title>
 
 <link rel="sylesheet" href="style.css">
+	<style>
+			h1 {color:red; font-family:helvetica,sans-serif; font-size:48px;}
+			body {background:#7BEFFF;}
+			p {font-family:courier,monospace;}
+	</style>
 
  	</head>
 
